<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/navigation_home" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_news"
        android:title="@string/navigation_news" />

    <item
        android:id="@+id/navigation_weather"
        android:icon="@drawable/ic_weather"
        android:title="@string/navigation_weather" />

    <item
        android:id="@+id/navigation_express"
        android:icon="@drawable/ic_express"
        android:title="@string/navigation_express" />

    <item
        android:id="@+id/navigation_me"
        android:icon="@drawable/ic_me"
        android:title="@string/navigation_me" />
</menu>