<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_share"

        android:title="@string/action_share"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_collect"

        android:title="@string/action_collect"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_download"

        android:title="@string/action_download"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_city_manager"

        android:title="@string/action_city_manager"
        app:showAsAction="never"/>
</menu>